# Spec-Hybrid-Search

./: .gitignore  CLAUDE.md  DocSense.spec  README.md  SpecIndex-standalone.html  SpecIndex.html  TECH_NOTES.md  app-i18n.jsx  app.jsx  data.js  deep-research-report.md  docsense.bat  docsense_banner.ps1  docsense_launcher.py  docsense_menu.ps1  docsense_start_hidden.ps1  i18n.js  pyproject.toml  start.py  styles.css
.afsmycoder/rules/: AFSMYCODER.md
.claude/: settings.local.json
.claude/skills/docsense-coding-style/: SKILL.md
app/: config.py  main.py
app/routes/: index.py
app/services/: embedder.py  fts.py
docsense/: .env.example  .gitignore  DocSense.spec  README.md  alembic.ini  docsense.bat  requirements.txt  start.py  start_all.py
docsense/alembic/: env.py
docsense/alembic/versions/: 001_initial_schema.py
docsense/app/: __init__.py  config.py  models.py
docsense/app/routes/: __init__.py  index.py  search.py
docsense/app/services/: __init__.py  embedder.py  qdrant_store.py
docsense/docsense/: __init__.py  config.py  pipeline.py
docsense/docsense/api/: main.py  schemas.py
docsense/frontend/: app.js  index.html  style.css
docsense/indexer/: __init__.py  watcher.py
docsense/tests/: __init__.py  test_api.py  test_chunking.py  test_parsers.py
frontend/: app.jsx  index.html
indexer/: pipeline.py  watcher.py
src/app/: config.py  main.py  models.py  watch_runtime.py  watch_settings.py
src/frontend/: app.jsx  index.html  tooltip.js
src/indexer/: extractor.py  pipeline.py  watcher.py
tests/: test_search_matching.py  test_watch_folder.py
(+45 files in other folders)
